updates to envs and editing